Update plugin CSS to fix scrolling and layout issues

--- a/src/GeositeFramework/plugins/layer_selector/main.css
+++ b/src/GeositeFramework/plugins/layer_selector/main.css
@@ -1,9 +1,26 @@
-﻿.pluginLayerSelector-spinner
-{
+﻿.pluginLayerSelector-spinner {
     width: 100%;
     height: 100%;
     background: url(images/spinner.gif) no-repeat center center;
 }
+
+.pluginLayerSelector-search {
+    height: 32px;
+    position: absolute;
+    width: 100%;
+    }
+    .pluginLayerSelector-search input[type="text"] {
+        margin: 0;
+    }
+
+.pluginLayerSelector-rest {
+    height: 100%;
+    padding-top: 32px;
+    }
+    .pluginLayerSelector-tree-container {
+        height: 100%;
+        overflow: scroll;
+    }
 
 /* 
  * Icons for different levels of the "Map Layers" tree 
